# BOLD-descriptor-tests

./: CMakeLists.txt  Helper.cpp  Helper.h  README.md  bold.cpp  bold.hpp  keypoint1.desc  main.cpp  utils.cpp  utils.h
include/: bold.hpp  helper.h  utils.h
src/: bold.cpp  helper.cpp  utils.cpp
